list( APPEND CMAKE_MODULE_PATH ${EOSIO_CDT_BIN} )
include( EosioCDTMacros )

add_native_executable( asset_tests asset_tests.cpp )
add_native_executable( binary_extension_tests binary_extension_tests.cpp )
add_native_executable( crypto_tests crypto_tests.cpp )
add_native_executable( datastream_tests datastream_tests.cpp )
add_native_executable( fixed_bytes_tests fixed_bytes_tests.cpp )
add_native_executable( name_tests name_tests.cpp )
add_native_executable( rope_tests rope_tests.cpp )
add_native_executable( serialize_tests serialize_tests.cpp )
add_native_executable( symbol_tests symbol_tests.cpp )
add_native_executable( system_tests system_tests.cpp )
add_native_executable( rope_tests rope_tests.cpp )
add_native_executable( print_tests print_tests.cpp )
add_native_executable( time_tests time_tests.cpp )
add_native_executable( varint_tests varint_tests.cpp )

add_dependencies( name_tests EosioTools )
add_dependencies( binary_extension_tests EosioTools )
add_dependencies( crypto_tests EosioTools )
add_dependencies( datastream_tests EosioTools )
add_dependencies( fixed_bytes_tests EosioTools )
add_dependencies( name_tests EosioTools )
add_dependencies( rope_tests EosioTools )
add_dependencies( serialize_tests EosioTools )
add_dependencies( symbol_tests EosioTools )
add_dependencies( system_tests EosioTools )
add_dependencies( time_tests EosioTools )
add_dependencies( varint_tests EosioTools )

add_subdirectory(test_contracts)
